<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- ACTION VARIABLES -->
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_confirm_delete">Completely delete this alarm?</string>
    <string name="action_credits">Credits</string>

    <!-- APP VARIABLES -->
    <string name="app_name">Light Alarm</string>
    <string name="app_description">Alarm app that sends POST message to home automation system to turn on lights</string>


    <!--- BUTTON VARIABLES -->
    <string name="btn_setAlarm_text">Set Alarm</string>


    <!-- GENERAL VARIABLES -->
    <string name="hello_world">Hello World</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- LABEL VARIABLES -->
    <!-- message when no alarms are set -->
    <string name="label_no_alarms_set">No Alarms Set</string>
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="details_alarm_api">API</string>
    <string name="details_alarm_api_default">Select to make API call</string>
    <string name="label_list_abr_day_0">S</string>
    <string name="label_list_abr_day_1">M</string>
    <string name="label_list_abr_day_2">T</string>
    <string name="label_list_abr_day_3">W</string>
    <string name="label_list_abr_day_4">T</string>
    <string name="label_list_abr_day_5">F</string>
    <string name="label_list_abr_day_6">S</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_affirmative">Yes</string>
    <string name="label_negative">No</string>

    <!-- NOTIFICATION VARIABLES -->
    <string name="notification_title">Light Alarm Notification</string>
    <string name="notification_text">That shit just happened!</string>
    <string name="notification_ticker">Thunder Cats HO!</string>

    <!-- TITLES VARIABLS -->
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_confirm_delete">Delete Alarm</string>
    <string name="title_credits_activity">Credits</string>


    <!-- PREF VARIABLES -->
    <!-- Label for the Theme preference view [CHAR LIMIT=30] -->
    <string name="pref_theme_label">Theme (restart required)</string>
    <!-- Labels for the Theme preference options [CHAR LIMIT=30] -->
    <string name="pref_theme_label_dark">Dark</string>
    <string name="pref_theme_label_light">Light</string>
    <!-- Values for the Theme preference [CHAR LIMIT=30] -->
    <string name="pref_theme_dark" translatable="false">1</string>
    <string name="pref_theme_light" translatable="false">2</string>
    <!-- Key name for storing theme in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_theme_key" translatable="false">theme</string>
    <!-- Default theme  [CHAR LIMIT=NONE] -->
    <string name="pref_theme_default" translatable="false">1</string>

    <!-- Label for the Notification preference view [CHAR LIMIT=30] -->
    <string name="pref_notification_label">Notification</string>
    <!-- Summary for the notification preference view [CHAR LIMIT=30] -->
    <string name="pref_notification_summary">Notify when alarm starts</string>
    <!-- Key name for storing notification in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_notification_key" translatable="false">notify</string>
    <!-- Default notification setting  [CHAR LIMIT=NONE] -->
    <string name="pref_notification_default" translatable="false">false</string>

    <!-- Heading for the API preference view [CHAR LIMIT=30] -->
    <string name="pref_api_heading">API Information</string>
    <!-- Label for the API preference view [CHAR LIMIT=30] -->
    <string name="pref_api_debug_label">API Debug</string>
    <string name="pref_api_host_label">API Host</string>
    <string name="pref_api_port_label">API Port</string>
    <string name="pref_api_path_label">API Path</string>
    <!-- Summary for the API preference view [CHAR LIMIT=30] -->
    <string name="pref_api_debug_summary">Shows API connection results in a toast</string>
    <string name="pref_api_host_summary">IP or Fully Qualified Domain</string>
    <string name="pref_api_port_summary">Numbers Only</string>
    <string name="pref_api_path_summary">Do NOT Include starting slash (/)</string>
    <!-- Key name for storing api in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_api_debug_key" translatable="false">apidebug</string>
    <string name="pref_api_host_key" translatable="false">apihost</string>
    <string name="pref_api_port_key" translatable="false">apiport</string>
    <string name="pref_api_path_key" translatable="false">apipath</string>
    <!-- Default api  [CHAR LIMIT=NONE] -->
    <string name="pref_api_debug_default" translatable="false">false</string>
    <string name="pref_api_host_default" translatable="false">http://jsonplaceholder.typicode.com</string>
    <string name="pref_api_port_default" translatable="false">80</string>
    <string name="pref_api_path_default" translatable="false">posts</string>

</resources>