<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_theme_label"
        android:key="@string/pref_theme_key"
        android:defaultValue="@string/pref_theme_dark"
        android:entryValues="@array/pref_theme_values"
        android:entries="@array/pref_theme_options" />

    <EditTextPreference
        android:title="@string/pref_api_host_label"
        android:key="@string/pref_api_host_key"
        android:defaultValue="@string/pref_api_host_default"
        android:summary="@string/pref_api_host_summary"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_api_port_label"
        android:key="@string/pref_api_port_key"
        android:defaultValue="@string/pref_api_port_default"
        android:summary="@string/pref_api_port_summary"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_api_path_label"
        android:key="@string/pref_api_path_key"
        android:defaultValue="@string/pref_api_path_default"
        android:summary="@string/pref_api_path_summary"
        android:inputType="text"
        android:singleLine="true" />

</PreferenceScreen>